resuming work on this

--- a/first.html
+++ b/first.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html5>
+<html>
     <! THIS IS MY FIRST ATTEMOT AT BUILDING A FULLY FUNCTIONAL AND DYNAMIC WEBSITE>
 
     <head>
@@ -7,7 +7,11 @@
             First Dynamic Website
         </title>
     </head>
-    <body>
 
+    <body>
+        Al Ammar Institute. <br /><br />
+       <p>
+            THIS IS MY FIRST ATTEMPT AT BUILDING A FULLY FUNCTIONAL AND DYNAMIC WEBSITE. 
+       </p>
     </body>
-</html5>
+</html>
