adding sections and title

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="MJ's Personal Website">
+    <meta name="author" content="Mustapha Jolaade">
 
 
     <!-- Bootstrap core CSS -->
@@ -12,23 +12,26 @@
     <!-- Custom styles for this template -->
     <link href="Content/scrolling-nav.css" rel="stylesheet">
     <link href="Content/Site.css" rel="stylesheet" />
-    <title></title>
+    <title> Mustapha Jolaade | Computational engineering </title>
 </head>
 <body id="page-top">
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">Mustapha Jolaade</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#about">About</a>
+                        <a class="nav-link js-scroll-trigger" href="#profile">Profile/CV</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+                        <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#news_events">News and events</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -39,16 +42,19 @@
     </nav>
     <header class="bg-primary text-white">
         <div class="container text-center">
-            <h1>Welcome to Scrolling Nav</h1>
-            <p class="lead">A landing page template freshly redesigned for Bootstrap 4</p>
+            <h1>Welcome to My Website</h1>
+            <p class="lead">
+                Mustapha is a computational engineer with a growth mindset who is passionate about creating impact, bringing value and working towards a better world.
+                I love to build scientific software, spend time with my family and watch and play football.
+            </p>
         </div>
     </header>
-    <section id="about">
+    <section id="profile">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h2>About this page</h2>
-                    <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
+                    <h2>About Me/CV</h2>
+                    <p class="lead">This is a great place to talk about my webpage and CV. This template features:</p>
                     <ul>
                         <li>Clickable nav links that smooth scroll to page sections</li>
                         <li>Responsive behavior when clicking nav links perfect for a one page website</li>
@@ -59,22 +65,48 @@
             </div>
         </div>
     </section>
-    <section id="services" class="bg-light">
+    <section id="projects" class="bg-light">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h2>Services we offer</h2>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
+                    <h2>Projects </h2>
+                    <p class="lead"> My interest in computer programming cuts across many areas of building/developing softwares and problem solving. Below are some of my recent projects, a brief description and the tools I used.</p>
+                    <p> For more of my non-programming projects (media work, charity, etc.), click here. Thanks!</p>
                 </div>
             </div>
         </div>
+    </section>
+
+    <section id="news_events" class="bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <h2> News, events &#38; opportunities</h2>
+                    <p class="lead">
+                        Check this space for news, events and opportunities in areas that I dabble
+                        in from Sports to Africa and global devlopment.
+                    </p>
+                    <ul>
+                        <li> Africa &#38; global development</li>
+                        <li> Mathematics and Computational Science Research</li>
+                        <li> Energy, Environment and climate. </li>
+                        <li> Sports: Football and F1 </li>
+                        <li> SWE and Computer Science. </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
     </section>
     <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h2>Contact us</h2>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+                    <h2>Contact</h2>
+                    <p class="lead">
+                        If you would like to reach me to discuss business, opportunities or comment about
+                        any of my work, please contact me at ...
+                    </p>
                 </div>
             </div>
         </div>
@@ -82,10 +114,13 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+            <p class="m-0 text-center text-white">Copyright &copy; Mustapha Jolaade, 2021</p>
+            <!--add a cool instagram page-->
+            <!--some cool youtube maybe-->
         </div>
     </footer>
-
+    <! add a cool instagram page>
+    <! some cool youtube maybe>
     <!-- Bootstrap core JavaScript -->
     <script src="Scripts/jquery-3.3.1.js"></script>
     <script src="Scripts/bootstrap.js"></script>
