--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -44,7 +44,7 @@
         <div class="container text-center">
             <h1>Welcome to My Website</h1>
             <p class="lead">
-                Mustapha is a computational engineer with a growth mindset who is passionate about creating impact, bringing value and working towards a better world.
+                I am  a computational engineer with a growth mindset. I am passionate about creating impact, bringing value and working towards a better world.
                 I love to build scientific software, spend time with my family and watch and play football.
             </p>
         </div>
