--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -54,7 +54,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h2>About Me/CV</h2>
-                    <p class="lead">This is a great place to talk about my webpage and CV. This template features:</p>
+                    <p class="lead"> This is a great place to talk about my webpage and CV. This template features:</p>
                     <ul>
                         <li>Clickable nav links that smooth scroll to page sections</li>
                         <li>Responsive behavior when clicking nav links perfect for a one page website</li>
@@ -71,13 +71,14 @@
                 <div class="col-lg-8 mx-auto">
                     <h2>Projects </h2>
                     <p class="lead"> My interest in computer programming cuts across many areas of building/developing softwares and problem solving. Below are some of my recent projects, a brief description and the tools I used.</p>
-                    <p> For more of my non-programming projects (media work, charity, etc.), click here. Thanks!</p>
+                    <p>For more of my non-programming projects (media work, charity, etc.), click here. Thanks!</p>
                 </div>
             </div>
         </div>
     </section>
 
     <section id="news_events" class="bg-light">
+        
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
@@ -86,26 +87,33 @@
                         Check this space for news, events and opportunities in areas that I dabble
                         in from Sports to Africa and global devlopment.
                     </p>
-                    <ul>
-                        <li> Africa &#38; global development</li>
-                        <li> Mathematics and Computational Science Research</li>
-                        <li> Energy, Environment and climate. </li>
-                        <li> Sports: Football and F1 </li>
-                        <li> SWE and Computer Science. </li>
-                    </ul>
+
+                    <div class="slider">
+                        <ul>
+                            <li> Africa &#38; global development</li>
+                            <li> Mathematics and Computational Science Research</li>
+                            <li> Energy, Environment and climate. </li>
+                            <li> Sports: Football and F1 </li>
+                            <li> SWE and Computer Science. </li>
+                        </ul>
+                    </div>
+                    
+
                 </div>
+
             </div>
         </div>
 
     </section>
+
     <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h2>Contact</h2>
                     <p class="lead">
-                        If you would like to reach me to discuss business, opportunities or comment about
-                        any of my work, please contact me at ...
+                        If you would like to reach me to discuss business/career opportunities or comment about
+                        any of my work, please email jolaademustapha[at]yahoo[dot]com.
                     </p>
                 </div>
             </div>
